--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+body {
+	font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+section h2 {
+	font-size: 50px;
+}
+
 #first-section {
 	background-image: url(../../img/bg-header.jpg);
 	background-size: cover;
@@ -52,7 +66,7 @@ hr {
 }
 
 
-#third-section .second-img {
+#third-section {
 	background-image: url(../../img/bg-quote.jpg);
 	background-size: cover;
 	background-position: center;
@@ -66,7 +80,7 @@ hr {
 	color: white;
 }
 
-#third-section h2 {
+#third-section h3 {
 	font-size: 36px;
 }
 
@@ -76,9 +90,67 @@ hr {
 
 #fourth-section {
 	text-align: center;
-	font-size: 36px;
 	background-color: #f7f7f7;
+	padding: 100px 0;
+}
 
+#fourth-section img {
+	position: relative;
+	width: 100%;
+	height: auto;
+}
+
+#fourth-section .overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 15px;
+	right: 15px;
+	background-color: rgba(34,34,34,0.5);
+}
+
+#fourth-section .caption {
+	position: absolute;
+	width: 100%;
+	height: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 15px;
+	margin: auto;	
+}
+
+#fourth-section .caption * {
+	color: rgba(255,255,255,0.7);
+}
+
+#fifth-section {
+	padding: 100px 0;
+	text-align: center;
+}
+
+#fifth-section p {
+	padding: 0 100px;
+}
+
+#sixth-section {
+	background-color: #222222;
+	color: white;
+	text-align: center;
+	padding: 100px;
+}
+
+.btn-subscribe {
+	background-color: #c2b49a;
+	color: white;
+}
+
+
+.btn {
+	background-color: transparent;
+	border: 1px solid white;
+	padding: 10px;
+	color: white;
 }
 
 
